# cse_md_sim

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
data/protein_files/CSE/: 2NMP.cif  3ELP.cif
data/protein_files/alpha_amylase/: 1CPU_prep.cif
data/protein_files/lysozyme/: 2LYZ.cif
setup/: OPENMM_PLUMED_OPES_SETUP.md
src/: analysis.py  config.py  enhanced_analysis.py  enhanced_fes2d.py  enhanced_sampling.py  equilibration.py  landscape_render.py  modal_train.py  production.py  reweight_fes.py  run_pipeline.py  run_simulation.py  system_builder.py
src/.ipynb_checkpoints/: enhanced_analysis-checkpoint.py
src/ml/: train_deeptica.py
