[project]
authors = [{name = "zertez", email = "marcus.d.figenschou@protonmail.com"}]
dependencies = []
name = "cse_md_sim"
requires-python = ">=3.10,<3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
cse_md_sim = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
openmm = ">=8.4.0,<8.5.0"
pdbfixer = ">=1.12,<2"
mdtraj = ">=1.11.1,<2"
pypdf = ">=6.14.2,<7"
openff-toolkit = ">=0.16.0,<0.18.0"
openmmforcefields = ">=0.14.0,<0.15.0"
rdkit = ">=2025.9.5,<2026"
openmm-ml = ">=1.2,<2"
openmm-torch = ">=1.4,<2"
torchani = ">=2.2,<3"
plumed = ">=2.9,<2.10"
openmm-plumed = ">=2.1,<2.2"
tqdm = ">=4.68.4,<5"
biopython = ">=1.87,<2"

# CUDA for Linux (Blackwell / RTX 5090)
[tool.pixi.feature.cuda]
platforms = ["linux-64"]

[tool.pixi.feature.cuda.dependencies]
cuda-version = "13.*"

[tool.pixi.feature.cuda.system-requirements]
cuda = "13"

[tool.pixi.environments]
# default is implicit (base deps only) — works on macOS + Linux CPU
# GPU environment (Linux only): run with `pixi run -e gpu ...`
gpu = ["cuda"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
