[project]
authors = [{name = "zertez", email = "marcus.d.figenschou@protonmail.com"}]
dependencies = ["mlcolvar>=1.2.2,<2", "modal>=1.5.3,<2"]
name = "cse_md_sim"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
  "osx-arm64",
  { platform = "linux-64", cuda = "12.8" }
]

[tool.pixi.dependencies]
# Common packages that work on both
openmm = ">=8.4,<8.5"
pdbfixer = ">=1.12,<2"
mdtraj = ">=1.11.1,<2"
pypdf = ">=6.14.2,<7"
openff-toolkit = ">=0.18.1,<0.19"
openmmforcefields = ">=0.15.1,<0.16"
rdkit = ">=2025.9.5,<2026"
openmm-ml = ">=1.2,<2"
openmm-torch = ">=1.4,<2"
openmm-plumed = "*"
torchani = ">=2.2,<3"
tqdm = ">=4.68.4,<5"
biopython = ">=1.87,<2"
plotly = ">=6.9.0,<7"
cmake = ">=4.4.0,<5"
ninja = ">=1.13.2,<2"
git = ">=2.55.0,<3"
eigen = ">=5.0.1,<6"
fftw = ">=3.3.11,<4"
gsl = ">=2.7,<3"
pkg-config = ">=0.29.2,<0.30"

# Platform-specific
[tool.pixi.target.osx-arm64.dependencies]
pytorch = "*"                    # Mac → MPS

[tool.pixi.target.linux-64.dependencies]
pytorch-gpu = "*"                # Linux → CUDA
cuda-version = ">=12.8,<13"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.activation.env]
PLUMED_KERNEL = "${CONDA_PREFIX}/lib/libplumedKernel.so"
LD_LIBRARY_PATH = "${CONDA_PREFIX}/lib:${LD_LIBRARY_PATH}"
PATH = "${CONDA_PREFIX}/bin:${PATH}"
